--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
